Bug 75489 - Context menu of toolbars not working
Summary: Context menu of toolbars not working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: high normal
Assignee: Andrzej Hunt
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-02-25 10:43 UTC by OfficeUser
Modified: 2014-05-30 11:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screen shot (29.86 KB, image/png)
2014-02-25 15:56 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2014-02-25 10:43:48 UTC
- Open any LibreOffice application
- Right-Click on any toolbar

Note that a context menu opens which gives access to all menu items which are not activated to be displayed on the toolbar. These are the items above the first diivider line. I see two bugs here:

1. Nothing happens when clicking left on these items.
2. The icons if these items are notb from the selected theme
Comment 1 OfficeUser 2014-02-25 10:45:10 UTC
Correction:
"2. The icons of these items are not from the selected theme"
Comment 2 tommy27 2014-02-25 12:43:45 UTC
which theme are you using?
please post a screenshot
Comment 3 OfficeUser 2014-02-25 15:54:20 UTC
Theme is "Sifr". I will attach a screen shot.
Comment 4 OfficeUser 2014-02-25 15:56:22 UTC
Created attachment 94720 [details]
screen shot
Comment 5 OfficeUser 2014-02-25 15:59:25 UTC
After more investigation I found out that there is a failure in "Sifr" theme containing some colored icons. These Icons are colored also when enabled for the toolbar.

But problem 1 (nothing happens on left click) remains.
Comment 6 tommy27 2014-02-25 16:49:13 UTC
(In reply to comment #5)
> After more investigation I found out that there is a failure in "Sifr" theme
> containing some colored icons. These Icons are colored also when enabled for
> the toolbar.

yes it's Bug 75256

> But problem 1 (nothing happens on left click) remains.

this need further investigation
Comment 7 tommy27 2014-02-25 16:53:44 UTC
(In reply to comment #5)
>
> But problem 1 (nothing happens on left click) remains.

is this persisting even changing icon theme or just with sifr?

I've also noticed that you did not specify your O/S. Windows, Linux or Mac?
Comment 8 OfficeUser 2014-02-25 17:09:22 UTC
is this persisting even changing icon theme or just with sifr?
    => Yes. It is independent of the selected theme.

I've also noticed that you did not specify your O/S. Windows, Linux or Mac?
    => I can reproduce it on both Linux and Windows machines.
Comment 9 V Stuart Foote 2014-02-27 06:33:29 UTC
This is by design, nothing to do with the incomplete Sifr icon set.

Those additional action icons will show from <Right> mouse context menu OR if the toolbar is detached from its dock point as a dropdown list.

Additionally, any of them can be added to the default action icons of each toolbar from Tools -> Customize and selecting the toolbar and then checking on or off the action icon.

Some of the actions will simply have no function if there is no active text selection.

To prove to yourself they do work, in your screen shot of the Standard toolbar context menu of additional (non-default) icons--select the 'Save as...'
Comment 10 OfficeUser 2014-02-27 10:24:51 UTC
Sorry. Non of these items does work. All show no event on click.

Also 'Save as...' doesn't do any thing on click like the other items.
Comment 11 V Stuart Foote 2014-02-27 14:15:19 UTC
We need your installation specifics.

Please provide details of your OS ,and open the Help -> About LibreOffice and copy out the build details

Then provide a set of 'Steps to Reproduce', with your exact keyboard and mouse actions. Please include the results if you access the additional action icons with all three methods as indicated, including adding actions to the default of a toolbar and restarting.

setting to needinfo
Comment 12 OfficeUser 2014-02-28 12:51:44 UTC
LibreOffice build info from Windows-PC:
Version: 4.2.1.1
Build-ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b

Computer Info:
Windows 8.1 64 Bit


But this thing is really OS-independent! I have the exactly same bug on my Ubuntu machine which additionally has also totally different hardware.
Comment 13 OfficeUser 2014-02-28 13:00:35 UTC
I will attach a video. There you can see that a left-click of any of these items just closes the menu.

Now - this is not shown in the video - I have enabled "Save As..." in the toolbar to be displayed. Clicking on the button now opens the save dialog as expected.
Comment 14 OfficeUser 2014-02-28 13:05:40 UTC
Sorry, video is too big to be attached.
Comment 15 OfficeUser 2014-03-02 13:24:13 UTC
Build info provided. NEEDINFO->NEW
Comment 16 V Stuart Foote 2014-03-02 15:59:38 UTC
The addition of the 'non visible' toolbar buttons onto the context menu was done for the 4.2.0 release, prior releases had only the 'visible buttons' and 'customize' options on the toolbar context menu.  Not clear what the intended UX was, but at this point they are not functional even though they can be clicked.

Confirming and setting version to 4.2.0.4
Comment 17 Commit Notification 2014-04-26 07:33:00 UTC
Andrzej Hunt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=944c78ecb91608f4c3e9bab32fdbc90c67326525

fdo#75489 Pass toolbar context menu commands to toolbar for handling.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Andrzej Hunt 2014-04-26 07:41:12 UTC
(Currently waiting for review but will hopefully make it into 4.2 soon.)
Comment 19 Commit Notification 2014-04-28 12:08:44 UTC
Andrzej Hunt committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e3d6ec6e5333bf1fa4bd151a9897dad20d11a14&h=libreoffice-4-2

fdo#75489 Pass toolbar context menu commands to toolbar for handling.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.