fdo#75489 Pass toolbar context menu commands to toolbar for handling.

The toolbar context menu is handled by the toolbar manager, however
the items are provided and managed by the toolbar itself -- previously
any events on the list of toolbar items in the context menu were silently
discarded, whereas now we pass them on to the owning toolbar.

Change-Id: Ia17718c3ff8acfba1b6d655022dd9469932f3493
(cherry picked from commit 944c78ecb91608f4c3e9bab32fdbc90c67326525)
Reviewed-on: https://gerrit.libreoffice.org/9170
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>